--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <footer>
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="flex">
-                <img src="../img/footer-imagen.png" alt="Viajeros saltando en la carretera" class="w-full h-full object-cover rounded-lg shadow-lg">
+                <img src="../img/TurismoCOL.jpg" alt="Viajeros saltando en la carretera" class="w-full h-full object-cover rounded-lg shadow-lg">
             </div>
 
             <div class="flex flex-col justify-center">
