--- a/src/components/SliderIndex.astro
+++ b/src/components/SliderIndex.astro
@@ -3,7 +3,7 @@
 <div id="slider" class="flex transition-transform duration-500 ease-in-out">
     <!-- Slide 1 -->
     <div class="relative w-full flex-shrink-0">
-        <img src="../img/Playas.jpg" alt="playas" class="w-full h-96 object-cover rounded-xl">
+        <img src="../img/playa.jpg" alt="playas" class="w-full h-96 object-cover rounded-xl">
         <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
             <h2 class="text-2xl font-semibold">Estas son las mejores playas de Colombia</h2>
             <button class="mt-4 btn-ver-mas">Ver más</button>
@@ -12,9 +12,9 @@
 
 <!-- Slide 2 -->
     <div class="relative w-full flex-shrink-0">
-        <img src="../img/lugar turistico.png" alt="lugares turisticos" class="w-full h-96 object-cover rounded-xl">
+        <img src="../img/colombia2.webp" alt="lugares turisticos" class="w-full h-96 object-cover rounded-xl">
         <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
-            <h2 class="text-2xl font-semibold">Estos son los mejores lugares turísticos de Colombia</h2>
+            <h2 class="text-2xl font-semibold">Conoce nuestras culturas</h2>
             <button class="mt-4 btn-ver-mas">Ver más</button>
         </div>
     </div>
@@ -27,7 +27,24 @@
             <button class="mt-4 btn-ver-mas">Ver más</button>
         </div>
     </div>
+    <!-- Slide 4 -->
+    <div class="relative w-full flex-shrink-0">
+      <img src="../img/Cartagena.jpg" alt="comidas tipicas" class="w-full h-96 object-cover rounded-xl">
+      <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
+          <h2 class="text-2xl font-semibold">Estos son los mejores lugares en Colombia</h2>
+          <button class="mt-4 btn-ver-mas">Ver más</button>
+      </div>
+  </div>
+      <!-- Slide 5 -->
+      <div class="relative w-full flex-shrink-0">
+        <img src="../img/Cafe.jpg" alt="comidas tipicas" class="w-full h-96 object-cover rounded-xl">
+        <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
+            <h2 class="text-2xl font-semibold">Prueba nuestro mejor café</h2>
+            <button class="mt-4 btn-ver-mas">Ver más</button>
+        </div>
+    </div>
 </div>
+
 
 <!-- Buttons for navigation -->
 <button id="prev" class="absolute top-1/2 left-0 transform -translate-y-1/2 bg-white p-6 rounded-r-lg shadow-lg text-gray-800 text-2xl">
