--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -16,23 +16,24 @@ import { ciudades } from "../data/hoteles";
     </span>
   </div>
 
-  <section class="p-4 space-y-8">
-    {ciudades.map((ciudad) => (
-      <div class="container mx-auto">
-        <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">{ciudad.nombre}</h1>
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          {ciudad.hoteles.map((hotel) => (
-            <ItemCard 
-              id={hotel.id} 
-              nombre={hotel.nombre} 
-              img={hotel.img} 
-              descripcion={hotel.descripcion}
-              tipo="hoteles"/>
-          ))}
-        </div>
+<section class="p-4 space-y-8">
+  {ciudades.map((ciudad) => (
+    <div class="seccion-ciudad container mx-auto">
+      <h1 class="ciudad-nombre text-3xl font-bold mb-4 mt-8 ml-4">{ciudad.nombre}</h1>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        {ciudad.hoteles.map((hotel) => (
+          <ItemCard
+            id={hotel.id}
+            nombre={hotel.nombre}
+            img={hotel.img}
+            descripcion={hotel.descripcion}
+            tipo="hoteles"
+          />
+        ))}
       </div>
-    ))}
-  </section>
-  
+    </div>
+  ))}
+</section>
+
   <Footer />
 </Layout>
