--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import SliderIndex from '../components/SliderIndex.astro';
 ---
 
-<Layout isHomePage={true} title="Página Principal">
+<Layout isHomePage={true} title="RutaFinder">
 <main class="container mx-auto">
     <div class="titulo text-center mb-6">
         <h1 class="text-3xl font-bold mt-4">Explora la Magia de Nuestro Paraíso Colombiano</h1>
