add: espacio slider y quitar searchbar

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -96,7 +96,7 @@
         </a>
         <input 
         id="search-bar" 
-        placeholder="Dónde ir, qué hacer, hoteles" 
+        placeholder="Escribe la ciudad de tu interés" 
         type="search" 
         class="input pl-10 w-full py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
         />
