--- a/src/components/SliderIndex.astro
+++ b/src/components/SliderIndex.astro
@@ -1,4 +1,4 @@
-<div class="relative w-full max-w-5xl mx-auto overflow-hidden">
+<div class="relative w-full max-w-5xl mx-auto overflow-hidden mb-5">
 <!-- Slides Wrapper -->
 <div id="slider" class="flex transition-transform duration-500 ease-in-out">
     <!-- Slide 1 -->
