Cambiando orden categories

--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -12,8 +12,7 @@ import ItemCard from '../components/ItemCard.astro';  // Asegúrate de que ItemC
       <h1 class="text-3xl font-bold mb-7">Paquetes y Tours por Colombia</h1>
       <span class="text-base text-gray-600">
       Los paquetes y tours de RutaFinder están diseñados para brindar a los viajeros una experiencia completa y 
-      personalizada en los destinos más atractivos de Colombia. Ya sea que busques 
-      aventura, cultura, naturaleza o descanso, RutaFinder ofrece una amplia variedad de opciones para todo tipo de viajeros.
+      personalizada en los destinos más atractivos de Colombia.
       </span>
     </div>
 
