--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -1,15 +1,12 @@
 ---
 ---
 <header class="bg-[#FFFFFF] p-[10px]">
-    <nav class="flex justify-around items-center h-[8vh]">
+    <nav class="flex justify-center items-center h-[8vh]">
         <div>
-            <a href="index.html">
-                <img class="w-[259px]"src="../img/LogoRutaFinder.svg" alt="Logo">
+            <a href="/">
+            <img class="w-[259px]" src="/img/LogoRutaFinder.svg" alt="Logo">
             </a>
         </div>
-        <a class="w-[168px] h-[45px] text-xl font-bold border-2 border-[#3B82F6] rounded-full flex items-center justify-center hover:bg-blue-500 hover:border-2 hover:border-gray-500 hover:text-white hover:text-xl" href="/login">
-Iniciar sesión
-</a>
     </nav>
 </header>
 
