--- a/src/pages/paquetes/[paquete].astro
+++ b/src/pages/paquetes/[paquete].astro
@@ -62,7 +62,7 @@ if (!paqueteInfo) {
 </div>
 <!--API DE GOOGLE-->
 <div class="mb-5 flex flex-col justify-center items-center px-4 md:px-3 lg:px-32 2xl:px-64 mx-auto">
-              <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el Punto de partida y sus puntos fuertes</h1>
+              <h1 class="text-3xl font-bold mb-8 text-center mt-8">Explora el lugar y sus puntos fuertes</h1>
               <iframe
                   src={paqueteInfo.mapa}
                   class="w-full h-[600px] rounded-2xl border-2 border-slate-300" allowfullscreen loading="lazy">
