fix bento responsive movil

--- a/src/pages/actividades/[actividad].astro
+++ b/src/pages/actividades/[actividad].astro
@@ -30,7 +30,7 @@ if (!actividadInfo) {
       {actividadInfo.descripcion}
     </span>
     <!--Bento Grid-->
-    <article class="mt-8 grid grid-cols-4 gap-4 auto-rows-[100px] sm:auto-rows-[150px] md:auto-rows-[200px] px-4 lg:px-32 mx-auto 2xl:px-64">
+    <article class="mt-8 grid grid-cols-1 gap-4 auto-rows-[100px] sm:grid-cols-4 md:auto-rows-[200px] px-4 lg:px-32 mx-auto 2xl:px-64">
       {actividadInfo.bento?.map((image, index) => (
         <div 
           class={`grid-item relative rounded overflow-hidden shadow-lg ${index % 5 === 0 ? 'col-span-2 row-span-2' : ''}`}
