change Slider index

--- a/src/components/SliderIndex.astro
+++ b/src/components/SliderIndex.astro
@@ -3,19 +3,19 @@
 <div id="slider" class="flex transition-transform duration-500 ease-in-out">
     <!-- Slide 1 -->
     <div class="relative w-full flex-shrink-0">
-        <img src="../img/playa.jpg" alt="playas" class="w-full h-96 object-cover rounded-xl">
+        <img src="../img/colombia2.webp" alt="playas" class="w-full h-96 object-cover rounded-xl">
         <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
-            <h2 class="text-2xl font-semibold">Estas son las mejores playas de Colombia</h2>
-            <button class="mt-4 btn-ver-mas">Ver más</button>
+            <h2 class="text-2xl font-semibold">Nuestra Biodiversidad Cultural</h2>
+            
         </div>
     </div>
 
 <!-- Slide 2 -->
     <div class="relative w-full flex-shrink-0">
-        <img src="../img/colombia2.webp" alt="lugares turisticos" class="w-full h-96 object-cover rounded-xl">
+        <img src="../img/playa.jpg" alt="lugares turisticos" class="w-full h-96 object-cover rounded-xl">
         <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
-            <h2 class="text-2xl font-semibold">Conoce nuestras culturas</h2>
-            <button class="mt-4 btn-ver-mas">Ver más</button>
+            <h2 class="text-2xl font-semibold">Las mejores playas de Colombia</h2>
+            
         </div>
     </div>
 
@@ -23,24 +23,24 @@
     <div class="relative w-full flex-shrink-0">
         <img src="../img/comidas tipicas.jpg" alt="comidas tipicas" class="w-full h-96 object-cover rounded-xl">
         <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
-            <h2 class="text-2xl font-semibold">Estos son los mejores platos de comida en Colombia</h2>
-            <button class="mt-4 btn-ver-mas">Ver más</button>
+            <h2 class="text-2xl font-semibold">Nuestras Comidas Típicas</h2>
+            
         </div>
     </div>
     <!-- Slide 4 -->
     <div class="relative w-full flex-shrink-0">
       <img src="../img/Cartagena.jpg" alt="comidas tipicas" class="w-full h-96 object-cover rounded-xl">
       <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
-          <h2 class="text-2xl font-semibold">Estos son los mejores lugares en Colombia</h2>
-          <button class="mt-4 btn-ver-mas">Ver más</button>
+          <h2 class="text-2xl font-semibold">Los rincones mas bellos en Colombia</h2>
+          
       </div>
   </div>
       <!-- Slide 5 -->
       <div class="relative w-full flex-shrink-0">
         <img src="../img/Cafe.jpg" alt="comidas tipicas" class="w-full h-96 object-cover rounded-xl">
         <div class="absolute bottom-8 left-8 bg-black bg-opacity-60 text-white p-6 rounded-lg">
-            <h2 class="text-2xl font-semibold">Prueba nuestro mejor café</h2>
-            <button class="mt-4 btn-ver-mas">Ver más</button>
+            <h2 class="text-2xl font-semibold">Nuestro mejor café</h2>
+            
         </div>
     </div>
 </div>
