--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -11,9 +11,7 @@ import ItemCard from '../components/ItemCard.astro'; // Componente para la tarje
     <div class="text-center">
       <h1 class="text-3xl font-bold mb-7">Nuestros restaurantes y comidas típicas</h1>
       <span class="text-base text-gray-600">
-      La agencia selecciona cuidadosamente los hoteles para asegurar que los huéspedes 
-      experimenten lo mejor de la cultura, la comodidad y el servicio local, 
-      adaptado a diferentes gustos y presupuestos.
+        La agencia elige restaurantes que destacan la gastronomía local, ofreciendo auténticas comidas típicas para todos los gustos y presupuestos.
       </span>
     </div>
 
