--- a/src/pages/actividades.astro
+++ b/src/pages/actividades.astro
@@ -11,9 +11,7 @@ import ItemCard from '../components/ItemCard.astro';
       <div class="text-center">
         <h1 class="text-3xl font-bold mb-7">Nuestras fiestas y actividades</h1>
         <span class="text-base text-gray-600">
-        La agencia selecciona cuidadosamente los hoteles para asegurar que los huéspedes 
-        experimenten lo mejor de la cultura, la comodidad y el servicio local, 
-        adaptado a diferentes gustos y presupuestos.
+          La agencia selecciona actividades culturales que permiten a los visitantes vivir auténticas experiencias locales, adaptadas a diferentes intereses y presupuestos
         </span>
       </div>
 
