--- a/src/components/ItemCard.astro
+++ b/src/components/ItemCard.astro
@@ -31,7 +31,7 @@ const { id, nombre, img, descripcion, tipo } = Astro.props;
 
       <!-- Botón de detalles más pequeño -->
       <div class="flex justify-center mt-auto">
-        <a href={`/${tipo}/${id}`}>
+        <a href={`/${tipo}/${id}`} target="_blank" rel="noopener noreferrer">
           <button class="bg-blue-500 text-white px-2 py-1 text-sm rounded-full w-32 hover:bg-blue-600">
             Más detalles
           </button>
